⚙️ Attempts to fix chunk loading 4